fixed overflow on commissons

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,3 @@ footer {
     width: 100%;
 }
 
-.test-bug{
-    width: 1000px;
-    height: 600px;
-}
